// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MonetaryAmount /> component its EU snapshot matches 1`] = `
<span
  class=""
>
  <span
    class="prefix"
  />
  <span
    class="value"
  >
    €10.00
  </span>
  <span
    class="rate"
  />
</span>
`;

exports[`<MonetaryAmount /> component its USD snapshot matches 1`] = `
.c0 .price-list {
  color: rgba(22,22,22,0.25);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<span
  class="c0"
>
  <span
    class="value"
  >
    $10,000
  </span>
</span>
`;

exports[`<MonetaryAmount /> component its snapshot matches 1`] = `
.c0 .price-list {
  color: rgba(22,22,22,0.25);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<span
  class="c0"
>
  <span
    class="prefix"
  >
    From 
  </span>
  <span
    class="value"
  >
    £10.03
  </span>
  <span
    class="rate"
  >
     
    per month
  </span>
</span>
`;
